--- a/code/style.css
+++ b/code/style.css
@@ -34,44 +34,96 @@ a:hover {
   color: floralwhite;
 }
 
-.big-news-container { 
+.news-container { 
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: ;
+  grid-template-rows: repeat(4, 1fr);
   grid-gap: 15px;
-  height: 300px;
-  padding: 15px 15px 5px 15px;
+  padding: 15px 20px 5px 20px;
 }
 
 .big-news-image {
   grid-column: 1 / 5;
+  grid-row: 1 / 3;
   background: pink;
+}
+
+.big-image {
+  height: 390px;
 }
 
 .big-news-text {
   grid-column: 5 / 9;
+  grid-row: 1 / 3;
   background: pink;
 }
 
+.big-news-paragraph {
+  font-family: Arial, Helvetica, sans-serif; 
+  font-size: medium;
+  font-style: italic;
+}
+
 h2 {
-padding: 5px;
+padding: 5px 0px 0px 0px;
 text-align: center;
 }
 
 p {
-  padding: 10px;
+  padding: 0px 15px 0px 15px;
+  text-align: justify;
 }
 
-.smaller-news-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 200px);
-  grid-gap: 15px;
-  padding: 15px 15px 10px 15px;  
-}
-
-.small-news {
+.small-news-one {
+  grid-column: 1 / 3;
+  grid-template-rows: 3 / 4;
   background: whitesmoke;
+}
+
+.small-news-two {
+  grid-column: 3 / 5;
+  grid-template-rows: 3 / 4;
+  background: whitesmoke;
+}
+
+.small-news-three {
+  grid-column: 5 / 7;
+  grid-template-rows: 3 / 4;
+  background: whitesmoke;
+}
+
+.small-news-four {
+  grid-column: 7 / 9;
+  grid-template-rows: 3 / 4;
+  background: whitesmoke;
+}
+
+.small-news-five {
+  grid-column: 1 / 3;
+  grid-template-rows: 4 / 5;
+  background: whitesmoke;
+}
+
+.small-news-six {
+  grid-column: 3 / 5;
+  grid-template-rows: 4 / 5;
+  background: whitesmoke;
+}
+
+.small-news-seven {
+  grid-column: 5 / 7;
+  grid-template-rows: 4 / 5;
+  background: whitesmoke;
+}
+
+.small-news-eight {
+  grid-column: 7 / 9;
+  grid-template-rows: 4 / 5;
+  background: whitesmoke;
+}
+
+.small-news-text {
+  font-size: small;
 }
 
 h3 {
