--- a/code/style.css
+++ b/code/style.css
@@ -220,22 +220,6 @@ h2 {
     grid-column: 3 / 7;
   }
 
-  .big-news {
-    background: #cfe0e8;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    margin-top: 25px;
-  }
-
-  .big-news img {
-    max-width: 50%;
-    padding: 10px;
-  }
-
-  .main-text {
-    flex: 1 0 50%;
-  }
-
   .trigger  {
     display: none;
   }
@@ -273,8 +257,25 @@ h2 {
     background-color: #87A5F7;
     padding: unset;
     border-radius: unset;
-
   }  
+
+  .big-news {
+    background: #cfe0e8;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    margin-top: 25px;
+  }
+
+  .big-news img {
+    max-width: 50%;
+    padding: 10px;
+  }
+
+  .main-text {
+    flex: 1 0 50%;
+  }
+
+  
 
   .info-boxes {
     flex-direction: row;
@@ -295,6 +296,72 @@ h2 {
 
 @media (min-width: 1024px) {
 
+  .header {
+    grid-template-columns: repeat(12, 1fr); 
+  }
+
+  h1 {
+    font-size: 3vw;
+    grid-column: 2 /5;
+    grid-row-start: 3;
+  }
+
+  .trigger  {
+    display: none;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  label {
+    grid-column: 9;
+    grid-row: 3;
+  }
+
+  nav {
+    display: block;
+    background: none;
+    transition: none;
+  }
+
+  ul {
+    width: auto;
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  ul li {
+    display: inline-block;
+    }
+
+  a {
+    font-size: 20px;
+    padding: 10px;
+  }  
+
+  a:hover {
+    background-color: #87A5F7;
+    padding: unset;
+    border-radius: unset;
+  }  
+
+  .big-news {
+    background: #cfe0e8;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    margin-top: 25px;
+  }
+
+  .big-news img {
+    max-width: 50%;
+    padding: 10px;
+  }
+
+  .main-text {
+    flex: 1 0 50%;
+  }
+
   .info-boxes {
     flex-direction: row;
     align-items: center;
@@ -304,17 +371,24 @@ h2 {
 
   .box  {
     width: 24%;
-    height: 250px;
+    height: 300px;
     border: none;
     flex-direction: column;
+    background: #87A5F7;
+    margin: 10px 0;
   }
 
   .text-in-fatbox {
     flex: 1 0 20%;
+    margin-top: 10px;
   }
   
   .image-box {
     flex: 1 0 80%;
+  }
+
+  .image-box img {
+    max-height: 210px;
   }
     
 }
