--- a/code/style.css
+++ b/code/style.css
@@ -3,12 +3,13 @@ html {
   color: #fff;
 }
 
-*{
+/*{
   
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-}
+}*/
+
 nav{
   background: silver;
   padding: 0 15px;
@@ -27,6 +28,8 @@ a{
 .logo{
   font-size: 20px;
   padding: 7.5px 10 7.5px 0; /*7,5 top och bottom, 10 right, 0 left*/
+ 
+
 }
 .item{
   padding: 10px ;
@@ -112,6 +115,396 @@ padding-left: 5px
 
 }
 
+.logo img{
+  height: 200px;
+  width: 200px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block
+}
+/* slut nav*/
+/*mobile first*/
 
+
+.title{
+  display: flex;
+justify-content: center;
+
+  
+}
+.title h1{
+  font-size: 100px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  
+}
+.big-news {
+  display: grid;
+  grid-template-columns: 1fr;
+  border: black solid;
+
+}
+
+.big-news img{
+  border: grey solid;
+  grid-column-start: 1;
+  grid-column-end: 2;
+ padding: 10px 10px 10px 10px;
+  height: 200px;
+  width: 200px;
+ 
+  
+
+}
+.big-news H2{
+  font-size:50px ;
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 2;
+ 
+
+}
+.big-news p{
+  text-align: center;
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+.small-news{
+  display: grid;
+  grid-template-columns: 1fr;
+  align-content: center;
+  justify-content: center;
+  border: solid red;
+
+  
+}
+
+.small-news img{
+  grid-column-start: 1;
+  grid-column-end: 2;
+  padding: 10px 10px 10px 10px;
+  height: 200px;
+  width: 200px;
+
+}
+
+.small-news p{
+  grid-column: 1/2;
+  font-size: 15px;
+ 
+
+}
+
+/*PADDA*/
+@media all and (min-width: 700px) {
+  .menu {
+      justify-content: center;
+  }
+  .logo {
+      flex: 1;
+  }
+  .item.button {
+      width: auto;
+      order: 1;
+      display: block;
+  }
+  .toggle {
+      flex: 1;
+      text-align: right;
+      order: 2;}
+
+      /* Button up from tablet screen */
+    .menu li.button a {
+      padding: 10px 15px;
+      margin: 5px 0;
+  }
+  .button a {
+      background: #0080ff;
+      border: 1px royalblue solid;
+  }
+  .button.secondary {
+      border: 0;
+  }
+  .button.secondary a {
+      background: transparent;
+      border: 1px #0080ff solid;  
+  }
+  .button a:hover {
+      text-decoration: none;
+  }
+  .button:not(.secondary) a:hover {
+      background: royalblue;
+      border-color: darkblue;
+  }
+
+
+/*START PADDA*/
+
+.title{
+  display: flex;
+justify-content: center;
+
+}
+.title h1{
+  font-size: 100px;
+  flex-direction: row;
+  flex-wrap: wrap;
+  
+}
+.big-news {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  border: red solid;
+
+}
+
+.big-news img{
+  border: violet solid;
+  grid-column-start: 1;
+  grid-column-end: 2;
+  
+ padding: 10px 10px 10px 10px;
+  height: 200px;
+  width: 200px;
+ 
+  
+
+}
+.big-news H2{
+  font-size:50px ;
+  text-align: center;
+  grid-column-start: 2;
+  grid-column-end: 3;
+ 
+
+}
+.big-news p{
+  text-align: center;
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+
+.small-news{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  /*grid-template-rows: 1fr 1fr 1fr 1fr;*/
+  align-content: center;
+  justify-content: center;
+  border: solid green;
+
+  
+}
+
+.small-news img{
+  padding: 10px 10px 10px 10px;
+  height: 200px;
+  width: 200px;
+  border: solid black;
+
+}
+
+.food{
+  grid-column-start: 1;
+  grid-column-end: 2; 
+ 
+
+}
+.days{
+  grid-column-start: 2;
+  grid-column-end: 3; 
+  
+}
+.drinks{
+  grid-column-start: 1;
+  grid-column-end: 2; 
+  
+}
+.beaches{grid-column-start: 2;
+  grid-column-end: 3; 
+  
+}
+.pets{
+  grid-column-start: 1;
+  grid-column-end: 2; 
+
+}
+.night{
+  grid-column-start: 2;
+  grid-column-end: 3; 
+
+}
+.trams{
+  grid-column-start: 1;
+  grid-column-end: 2; 
+
+}
+.walking{
+  grid-column-start: 2;
+  grid-column-end: 3; 
+
+}
+
+
+}
+
+
+
+
+/*desktop*/
+
+@media (min-width:960px){
+
+  /*navigation*/
+ .menu{ align-items: flex-start;     
+  flex-wrap: nowrap;
+  background: none;
+}
+.logo {
+  order: 0;
+
+}
+
+.logo img{
+  height: 300px;
+  width: 300px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block
+}
+.item {
+  order: 1;
+  position: relative;
+  display: block; 
+  width: auto;
+}
+.button {
+  order: 2;
+}
+.submenu-active .submenu {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 68px;
+  background: #111;
+}
+.toggle {
+  display: none;
+}
+.submenu-active {
+  border-radius: 0;
+}
+/*navigation stop*/
+
+/*START*/
+
+  .title{
+    display: flex;
+  justify-content: center;
+  
+  }
+  .title h1{
+    font-size: 100px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+  }
+  .big-news {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    border: black solid;
+  
+  }
+  
+  .big-news img{
+    border: grey solid;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    
+   padding: 10px 10px 10px 10px;
+    height: 200px;
+    width: 200px;
+   
+    
+  
+  }
+  .big-news H2{
+    font-size:50px ;
+    text-align: center;
+    grid-column-start: 2;
+    grid-column-end: 3;
+   
+  
+  }
+  .big-news p{
+    text-align: center;
+    grid-column-start: 2;
+    grid-column-end: 3;
+  }
+  
+  .small-news{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    align-content: center;
+    justify-content: center;
+    border: solid red;
+  
+    
+  }
+  
+  .small-news img{
+    padding: 10px 10px 10px 10px;
+    height: 200px;
+    width: 200px;
+  
+  }
+ 
+  
+  .food{
+    grid-column-start: 1;
+    grid-column-end: 2; 
+   
+
+  }
+  .days{
+    grid-column-start: 2;
+    grid-column-end: 3; 
+    
+  }
+  .drinks{
+    grid-column-start: 3;
+    grid-column-end: 4; 
+    
+  }
+  .beaches{grid-column-start: 4;
+    grid-column-end: 5; 
+    
+  }
+  .pets{
+    grid-column-start: 1;
+    grid-column-end: 2; 
+
+  }
+  .night{
+    grid-column-start: 2;
+    grid-column-end: 3; 
+
+  }
+  .trams{
+    grid-column-start: 3;
+    grid-column-end: 4; 
+
+  }
+  .walking{
+    grid-column-start: 4;
+    grid-column-end: 5; 
+
+  }
+
+ 
+}
 
 
