cleaned up code and comments

--- a/code/style.css
+++ b/code/style.css
@@ -9,7 +9,6 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-/* Style the header with a grey background and some padding */
 .header {
   overflow: hidden;
   background-color: #a4e59c;
@@ -25,7 +24,7 @@ body {
   font-size: 20px;
 }
 
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
+/* Style the logo link */
 .header a.logo {
   font-size: 28px;
   font-weight: bold;
@@ -47,7 +46,7 @@ body {
 
 
 
-/* Add media queries for responsiveness - when the screen is 668px wide or less, stack the links on top of each other*/ 
+/* Add media queries for responsivenes - when the screen is 668px wide or less, stack the links on top of each other*/ 
 @media screen and (max-width: 668px) {
   .header a {
     float: none;
@@ -62,8 +61,8 @@ body {
 
 
 
-
-.band { 
+/*this is the main grid container*/
+.container { 
   width: 90%;
   max-width: 1240px;
   margin: 20px auto;
@@ -77,7 +76,7 @@ body {
 
 /* media querie for responsivnes - when the screen hits a minimun of 668px will have two columns*/
 @media only screen and (min-width: 668px) {
-  .band {
+  .container {
     grid-template-columns: 1fr 1fr;
   }  
   
@@ -91,9 +90,9 @@ body {
   
 }
 
-/* media querie for responsivness - when the screen hits a minimun of 1024px will have four columns*/
+/* media querie for responsivnes - when the screen hits a minimun of 1024px will have four columns*/
 @media only screen and (min-width: 1024px) {
-  .band {
+  .container {
     grid-template-columns: repeat(4, 1fr);
   }
 }
