--- a/code/style.css
+++ b/code/style.css
@@ -11,7 +11,7 @@ h1 {
   color: white;
   margin: 20px;
   padding: 20px;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family
   
 }
 
@@ -123,7 +123,7 @@ li {
 
 /* styling for desktop (1024px eller större) */
 
-@media (min-widht: 1025px) {
+@media (min-width: 1025px) {
    
 .navbar {
   border: 2px solid green;
