Added all my images etc

--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,23 @@
-html {
-  background: #0025ff;
-  color: #fff;
+/*Variables*/
+
+:root{
+  --main-radius:20px;
+  --main-padding:8px;
+  --main-margin:12px;
+}
+
+
+/* Main CSS attributes*/
+
+
+body{
+  background-color: white;
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1{
+  font-family: 'Rozha One', serif;
+  font-size: 55px;
+  color: rgb(255, 255, 255);
+  margin: 0;
 }
